Finish split of big file into little files

--- a/docs/csi/9b-5e.md
+++ b/docs/csi/9b-5e.md
@@ -7,7 +7,7 @@ Source: E-CF
 Title: (SIMD) Select Implicit Movement Direction
 Description: Sets cursor movement direction.
 
-Sets the cursor movement direction relative to the character progression. Default value is `0`.
+Sets the cursor movement direction relative to the character progression.
 
 | `{p}` | Description                        | Source |
 |-------|------------------------------------|--------|
