--- a/docs/csi/9b-6d.md
+++ b/docs/csi/9b-6d.md
@@ -1,91 +1,21 @@
 Category: DISPLAY
-Format: `CSI {n} k`
-8-Bit Hex: `9b {n} 6b`
-7-Bit Hex: `1b {n} 6b`
-Default: `{n}` = `1`
-Source: E-CF
-Title: (VPB) Line Position Backward
-Description: Move the cursor up `{n}` lines.
-
-
-Display Modification
---------------------
-
-| Code                 | Description                                                                      | Default | Source |
-|----------------------|----------------------------------------------------------------------------------|---------|--------|
-| `CSI {n} SP @`       | (SL: Scroll Left) Moves displayed text left `{n}` columns.                       | `1`     | [E-CF] |
-| `CSI {n} SP A`       | (SR: Scroll Right) Moves displayed text right `{n}` columns.                     | `1`     | [E-CF] |
-| `CSI {d} ; {e} SP S` | (SPD: Set Presentation Direction) Sets text direction. *See below.*              | `0;0`   | [E-CF] |
-| `CSI {n} @`          | (ICH: Insert Character) Insert `{n}` blanks at the cursor position.              | `1`     | [E-CF] |
-| `CSI {p} J`          | (ED: Erase In Page) Erase some or all of the screen. *See below.*                | `0`     | [E-CF] |
-| `CSI {p} K`          | (EL: Erase In Line) Erase some or all of the current line. *See below.*          | `0`     | [E-CF] |
-| `CSI {n} L`          | (IL: Insert Line) Insert `{n}` lines starting at cursor.                         | `1`     | [E-CF] |
-| `CSI {n} M`          | (DL: Delete Line) Delete `{n}` lines, shifting other lines to close the gap.     | `1`     | [E-CF] |
-| `CSI {n} P`          | (DCH: Delete Character) Delete `{n}` characters and shifts rest of line left.    | `1`     | [E-CF] |
-| `CSI {n} S`          | (SU: Scroll Up) Scroll display up `{n}` lines.                                   | `1`     | [E-CF] |
-| `CSI {n} T`          | (SD: Scroll Down) Scroll display down `{n}` lines.                               | `1`     | [E-CF] |
-| `CSI {n} U`          | (NP: Next Page) Display the `{n}`th page to be displayed.                        | `1`     | [E-CF] |
-| `CSI {n} V`          | (PP: Preceding Page) Display the `{n}`th previous page.                          | `1`     | [E-CF] |
-| `CSI {n} X`          | (ECH: Erase Character) Erase `{n}` characters from cursor and going forward.     | `1`     | [E-CF] |
-| `CSI {n} b`          | (REP: Repeat) Repeat preceding character `{n}` times.                            | `1`     | [E-CF] |
-| `CSI {p..} m`        | (SGR: Select Graphic Rendition) Set colors, fonts, and many others. *See below.* | `0`     | [E-CF] |
-
-
-### `SP S`: Set Presentation Direction (SPD)
-
-Format: `CSI {d} ; {e} SP S`
-
-Sets the presentation direction according to `{d}` and with effector `{e}`. The default value is `0;0`.
-
-| `{d}` | Description                                                    | Source |
-|-------|----------------------------------------------------------------|--------|
-| `0`   | Horizontal lines from top to bottom. Lines fill left to right. | [E-CF] |
-| `1`   | Vertical lines from right to left. Lines fill top to bottom.   | [E-CF] |
-| `2`   | Vertical lines from left to right. Lines fill top to bottom.   | [E-CF] |
-| `3`   | Horizontal lines from top to bottom. Lines fill right to left. | [E-CF] |
-| `4`   | Vertical lines from left to right. Lines fill bottom to top.   | [E-CF] |
-| `5`   | Horizontal lines from bottom to top. Lines fill right to left. | [E-CF] |
-| `6`   | Horizontal lines from bottom to top. Lines fill left to right. | [E-CF] |
-| `7`   | Vertical lines from right to left. Lines fill bottom to top.   | [E-CF] |
-
-| `{e}` | Description                                                                          | Source |
-|-------|--------------------------------------------------------------------------------------|--------|
-| `0`   | Undefined, implementation dependent.                                                 | [E-CF] |
-| `1`   | Update active line in presentation component to match active line in data component. | [E-CF] |
-| `2`   | Update active line in data component to match active line in presentation component. | [E-CF] |
-
-
-### `J`: Erase In Page (ED)
-
-Format: `CSI {p} J`
-
-Erases some or all of the screen. `{p}` defaults to `0`.
-
-| `{p}` | Description                                            | Source |
-|-------|--------------------------------------------------------|--------|
-| `0`   | Erase from cursor through the end of the screen.       | [E-CF] |
-| `1`   | Erase from beginning of the screen through the cursor. | [E-CF] |
-| `2`   | Erase the entire screen.                               | [E-CF] |
-
-
-### `K`: Erase In Line (ED)
-
-Format: `CSI {p} K`
-
-Erases some or all of the current line. `{p}` defaults to `0`.
-
-| `{p}` | Description                                          | Source |
-|-------|------------------------------------------------------|--------|
-| `0`   | Erase from cursor through the end of the line.       | [E-CF] |
-| `1`   | Erase from beginning of the line through the cursor. | [E-CF] |
-| `2`   | Erase the entire line.                               | [E-CF] |
-
-
-### `m`: Select Graphic Rendition (SGR)
-
 Format: `CSI {p..} m`
+8-Bit Hex: `9b {p..} 6d`
+7-Bit Hex: `1b 5b {p..} 6d`
+Default: `{p..}` = `0`
+Source: E-CF
+Title: (SGR) Select Graphic Rendition
+Description: Set colors, fonts, and many others.
 
-Sets one or more graphic rendition aspects for subsequent text. The default is `0` and the implementation determines what combinations are usable.
+Sets one or more graphic rendition aspects for subsequent text. The implementation determines what combinations are usable.
+
+Multiple codes are allowed to be sent. Separate values with semicolons (hex 3b).
+
+Hex examples:
+
+    1b 5b 62                  Defaults to `0`. Resets colors and effects.
+    1b 5b 31 62               31 is hex for `1`. Sets bold.
+    1b 5b 33 30 3b 34 31 62   `30;41` is black text on a red background.
 
 | `{p}` | Description                                             | Source |
 |-------|---------------------------------------------------------|--------|
