--- a/docs/csi/9b-6a.md
+++ b/docs/csi/9b-6a.md
@@ -1,7 +1,7 @@
 Category: CURSOR
 Format: `CSI {n} j`
 8-Bit Hex: `9b {n} 6a`
-7-Bit Hex: `1b {n} 6a`
+7-Bit Hex: `1b 5b {n} 6a`
 Default: `{n}` = `1`
 Source: E-CF
 Title: (HPB) Character Position Backward
