--- a/docs/csi/9b-4a.md
+++ b/docs/csi/9b-4a.md
@@ -1,7 +1,7 @@
 Category: DISPLAY
 Format: `CSI {p} J`
-8-Bit Hex: `9b {p} 4A`
-7-Bit Hex: `1b 5b {p} 4A`
+8-Bit Hex: `9b {p} 4a`
+7-Bit Hex: `1b 5b {p} 4a`
 Default: `{p}` = `0`
 Source: E-CF
 Title: (ED) Erase In Page
