Filling in gaps, fixing problems

--- a/docs/csi/9b-6c.md
+++ b/docs/csi/9b-6c.md
@@ -18,25 +18,25 @@ Hex examples:
 
 | `{p}` | Description                                | Source |
 |-------|--------------------------------------------|--------|
-| `1`   | Guarded area transfer mode (GATM).         | [E-CF] |
-| `2`   | Keyboard action mode (KAM).                | [E-CF] |
-| `3`   | Control representation mode (CRM).         | [E-CF] |
-| `4`   | Intersection replacement mode (IRM).       | [E-CF] |
-| `5`   | Status report transfer mode (SRTM).        | [E-CF] |
-| `6`   | Erasure mode (ERM).                        | [E-CF] |
-| `7`   | Line editing mode (VEM).                   | [E-CF] |
-| `8`   | Bidirectional support mode (BDSM).         | [E-CF] |
-| `9`   | Device component select mode (DCSM).       | [E-CF] |
-| `10`  | Character editing mode (HEM).              | [E-CF] |
-| `11`  | Positioning unit mode (PUM).               | [E-CF] |
-| `12`  | Send/receive mode (SRM).                   | [E-CF] |
-| `13`  | Format effector action mode (FEAM).        | [E-CF] |
-| `14`  | Format effector transfer mode (FETM).      | [E-CF] |
-| `15`  | Multiple area transfer mode (MATM).        | [E-CF] |
-| `16`  | Transfer termination mode (TTM).           | [E-CF] |
-| `17`  | Selected area transfer mode (SATM).        | [E-CF] |
-| `18`  | Tabulation stop mode (TSM).                | [E-CF] |
-| `19`  | Shall not be used.                         | [E-CF] |
-| `20`  | Shall not be used.                         | [E-CF] |
-| `21`  | Graphic rendition combination mode (GRCM). | [E-CF] |
-| `22`  | Zero default mode (ZDM).                   | [E-CF] |
+| `1`   | Guarded Area Transfer Mode (GATM).         | [E-CF] |
+| `2`   | Keyboard Action Mode (KAM).                | [E-CF] |
+| `3`   | Control Representation Mode (CRM).         | [E-CF] |
+| `4`   | Intersection Replacement Mode (IRM).       | [E-CF] |
+| `5`   | Status Report Transfer Mode (SRTM).        | [E-CF] |
+| `6`   | Erasure Mode (ERM).                        | [E-CF] |
+| `7`   | Line Editing Mode (VEM).                   | [E-CF] |
+| `8`   | Bidirectional Support Mode (BDSM).         | [E-CF] |
+| `9`   | Device Component Select Mode (DCSM).       | [E-CF] |
+| `10`  | Character Editing Mode (HEM).              | [E-CF] |
+| `11`  | Positioning Unit Mode (PUM).               | [E-CF] |
+| `12`  | Send/Receive Mode (SRM).                   | [E-CF] |
+| `13`  | Format Effector Action Mode (FEAM).        | [E-CF] |
+| `14`  | Format Effector Transfer Mode (FETM).      | [E-CF] |
+| `15`  | Multiple Area Transfer Mode (MATM).        | [E-CF] |
+| `16`  | Transfer Termination Mode (TTM).           | [E-CF] |
+| `17`  | Selected Area Transfer Mode (SATM).        | [E-CF] |
+| `18`  | Tabulation Stop Mode (TSM).                | [E-CF] |
+| `19`  | *Shall not be used.*                       | [E-CF] |
+| `20`  | *Shall not be used.*                       | [E-CF] |
+| `21`  | Graphic Rendition Combination Mode (GRCM). | [E-CF] |
+| `22`  | Zero Default Mode (ZDM).                   | [E-CF] |
