Making sources consistent

--- a/docs/csi/9b-20-41.md
+++ b/docs/csi/9b-20-41.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP A`
 8-Bit Hex: `9b {n} 20 41`
 7-Bit Hex: `1b 5b {n} 20 41`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (SR) Scroll Right
 Description: Moves displayed text right `{n}` columns.
