--- a/docs/csi/9b-20-42.md
+++ b/docs/csi/9b-20-42.md
@@ -4,7 +4,7 @@ Format: `CSI {h} ; {w} SP B`
 7-Bit Hex: `1b 5b {h} 3b {w} 20 42`
 Default: `{h}` = `100`
     `{w}` = `100`
-Source: E-CF
+Source: [E-CF]
 Title: (GSM) Graphic Size Modification
 Description: Change the text height and width.
 
