--- a/docs/csi/9b-20-44.md
+++ b/docs/csi/9b-20-44.md
@@ -4,7 +4,7 @@ Format: `CSI {f} ; {m} SP D`
 7-Bit Hex: `1b 5b {f} 3b {m} 20 44`
 Default: `{f}` = `0`
     `{m}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (FNT) Font Selection
 Description: Changes font number `{f}` to be font `{m}`.
 
