--- a/docs/csi/9b-20-45.md
+++ b/docs/csi/9b-20-45.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP E`
 8-Bit Hex: `9b {p} 20 45`
 7-Bit Hex: `1b 5b {p} 20 45`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (TSS) Thin Space Specification
 Description: Sets width of a thin space.
 
