--- a/docs/csi/9b-20-47.md
+++ b/docs/csi/9b-20-47.md
@@ -3,7 +3,7 @@ Format: `CSI {l} ; {c} SP G`
 8-Bit Hex: `9b {l} 3b {c} 20 47`
 7-Bit Hex: `1b 5b {l} 3b {c} 20 47`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SPI) Spacing Increment
 Description: Changes line and character spacing.
 
