--- a/docs/csi/9b-20-48.md
+++ b/docs/csi/9b-20-48.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP H`
 8-Bit Hex: `9b {p} 20 48`
 7-Bit Hex: `1b 5b {p} 20 48`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (QUAD) Quad
 Description: Overlay characters on a single line.
 
