--- a/docs/csi/9b-20-49.md
+++ b/docs/csi/9b-20-49.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP I`
 8-Bit Hex: `9b {p} 20 49`
 7-Bit Hex: `1b 5b {p} 20 49`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SSU) Select Size Unit
 Description: Pick a unit that affects several commands.
 
