--- a/docs/csi/9b-20-4a.md
+++ b/docs/csi/9b-20-4a.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP J`
 8-Bit Hex: `9b {p} 20 4a`
 7-Bit Hex: `1b 5b {p} 20 4a`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (PFS) Page Format Selection
 Description: Set the paper size for text.
 
