--- a/docs/csi/9b-20-4b.md
+++ b/docs/csi/9b-20-4b.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP K`
 8-Bit Hex: `9b {p} 20 4b`
 7-Bit Hex: `1b 5b {p} 20 4b`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SHS) Select Character Spacing
 Description: Sets spacing for subsequent text.
 
