--- a/docs/csi/9b-20-4c.md
+++ b/docs/csi/9b-20-4c.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP L`
 8-Bit Hex: `9b {p} 20 4c`
 7-Bit Hex: `1b 5b {p} 20 4c`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SVS) Select Line Spacing
 Description: Sets line spacing.
 
