--- a/docs/csi/9b-20-4d.md
+++ b/docs/csi/9b-20-4d.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP M`
 8-Bit Hex: `9b {p} 20 4d`
 7-Bit Hex: `1b 5b {p} 20 4d`
 Default: `{p}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (IGS) Identify Graphic Subrepertoire
 Description: Identifies graphic characters.
 
