--- a/docs/csi/9b-20-4e.md
+++ b/docs/csi/9b-20-4e.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} SP N`
 8-Bit Hex: `9b {p..} 20 4e`
 7-Bit Hex: `1b 5b {p..} 20 4e`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (HTSA) Character Tabulation Set Absolute
 Description: *Deprecated.*
 
