--- a/docs/csi/9b-20-4f.md
+++ b/docs/csi/9b-20-4f.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP O`
 8-Bit Hex: `9b {p} 20 4f`
 7-Bit Hex: `1b 5b {p} 20 4f`
 Default: `{p}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (IDCS) Identify Device Control String
 Description: Specify type of future commands.
 
