--- a/docs/csi/9b-20-50.md
+++ b/docs/csi/9b-20-50.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP P`
 8-Bit Hex: `9b {p} 20 50`
 7-Bit Hex: `1b 5b {p} 20 50`
 Default: `{p}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (PPA) Page Position Absolute
 Description: Sets active data position and page.
 
