--- a/docs/csi/9b-20-51.md
+++ b/docs/csi/9b-20-51.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP Q`
 8-Bit Hex: `9b {p} 20 51`
 7-Bit Hex: `1b 5b {p} 20 51`
 Default: `{p}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (PPR) Page Position Forward
 Description: Sets active data position and page.
 
