--- a/docs/csi/9b-20-52.md
+++ b/docs/csi/9b-20-52.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP R`
 8-Bit Hex: `9b {p} 20 52`
 7-Bit Hex: `1b 5b {p} 20 52`
 Default: `{p}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (PPB) Page Position Backward
 Description: Sets active data position and page.
 
