--- a/docs/csi/9b-20-53.md
+++ b/docs/csi/9b-20-53.md
@@ -4,7 +4,7 @@ Format: `CSI {d} ; {e} SP S`
 7-Bit Hex: `1b 5b {d} 3b {e} 20 53`
 Default: `{d}` = `0`
     `{e}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SPD) Set Presentation Direction
 Description: Sets text direction.
 
