--- a/docs/csi/9b-20-54.md
+++ b/docs/csi/9b-20-54.md
@@ -3,7 +3,7 @@ Format: `CSI {l} ; {c} SP T`
 8-Bit Hex: `9b {l} 3b {c} 20 54`
 7-Bit Hex: `1b 5b {l} 3b {c} 20 54`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (DTA) Dimension Text Area
 Description: Create a text area.
 
