--- a/docs/csi/9b-20-58.md
+++ b/docs/csi/9b-20-58.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP X`
 8-Bit Hex: `9b {p} 20 58`
 7-Bit Hex: `1b 5b {p} 20 58`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SPQR) Set Print Quality And Rapidity
 Description: Controls printer speed, quality.
 
