--- a/docs/csi/9b-20-59.md
+++ b/docs/csi/9b-20-59.md
@@ -4,7 +4,7 @@ Format: `CSI {l} ; {s} SP Y`
 7-Bit Hex: `1b 5b {l} 3b {s} 20 59`
 Default: `{l}` = `0`
     `{s}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SEF) Sheet Eject And Feed
 Description: Ejects a sheet and loads a new one.
 
