--- a/docs/csi/9b-20-5b.md
+++ b/docs/csi/9b-20-5b.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP [`
 8-Bit Hex: `9b {p} 20 5b`
 7-Bit Hex: `1b 5b {p} 20 5b`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SSW) Set Space Width
 Description: Sets the character escapement.
 
