--- a/docs/csi/9b-20-5d.md
+++ b/docs/csi/9b-20-5d.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} SP ]`
 8-Bit Hex: `9b {p..} 20 5d`
 7-Bit Hex: `1b 5b {p..} 20 5d`
 Default: `{p..}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SAPV) Select Alternative Presentation Variants
 Description: Display text differently.
 
