--- a/docs/csi/9b-20-5f.md
+++ b/docs/csi/9b-20-5f.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP _`
 8-Bit Hex: `9b {p} 20 5f`
 7-Bit Hex: `1b 5b {p} 20 5f`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (GCC) Graphic Character Combination
 Description: Overlays characters as a single byte.
 
