--- a/docs/csi/9b-20-63.md
+++ b/docs/csi/9b-20-63.md
@@ -4,7 +4,7 @@ Format: `CSI {c} ; {t} SP c`
 7-Bit Hex: `1b 5b {c} 3b {t} 20 63`
 Default: `{c}` = *none*
     `{t}` = `32`
-Source: E-CF
+Source: [E-CF]
 Title: (TCC) Tabulation Centered On Character
 Description: Center text on a character.
 
