--- a/docs/csi/9b-20-64.md
+++ b/docs/csi/9b-20-64.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP d`
 8-Bit Hex: `9b {n} 20 64`
 7-Bit Hex: `1b 5b {n} 20 64`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (TSR) Tabulation Stop Remove
 Description: Removes tab stop at column `{n}`.
