--- a/docs/csi/9b-20-65.md
+++ b/docs/csi/9b-20-65.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP e`
 8-Bit Hex: `9b {p} 20 65`
 7-Bit Hex: `1b 5b {p} 20 65`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SCO) Select Character Orientation
 Description: Rotate text.
 
