--- a/docs/csi/9b-20-66.md
+++ b/docs/csi/9b-20-66.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP f`
 8-Bit Hex: `9b {p} 20 66`
 7-Bit Hex: `1b 5b {p} 20 66`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SRCS) Set Reduced Character Separation
 Description: Condenses text by removing space.
 
