--- a/docs/csi/9b-20-67.md
+++ b/docs/csi/9b-20-67.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP g`
 8-Bit Hex: `9b {p} 20 67`
 7-Bit Hex: `1b 5b {p} 20 67`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SCS) Set Character Spacing
 Description: Sets spacing of following text.
 
