--- a/docs/csi/9b-20-6b.md
+++ b/docs/csi/9b-20-6b.md
@@ -3,7 +3,7 @@ Format: `CSI {p} ; {e} SP k`
 8-Bit Hex: `9b {p} 3b {e} 20 6b`
 7-Bit Hex: `1b 5b {p} 3b {e} 20 6b`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SCP) Select Character Path
 Description: Reverses flow of text.
 
