--- a/docs/csi/9b-42.md
+++ b/docs/csi/9b-42.md
@@ -3,6 +3,6 @@ Format: `CSI {n} B`
 8-Bit Hex: `9b {n} 42`
 7-Bit Hex: `1b 5b {n} 42`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CUD) Cursor Down
 Description: Moves the cursor down `{n}` lines.
