--- a/docs/csi/9b-45.md
+++ b/docs/csi/9b-45.md
@@ -3,6 +3,6 @@ Format: `CSI {n} E`
 8-Bit Hex: `9b {n} 45`
 7-Bit Hex: `1b 5b {n} 45`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CNL) Cursor Next Line
 Description: Moves the cursor to the first character of the `{n}`th following line.
