--- a/docs/csi/9b-48.md
+++ b/docs/csi/9b-48.md
@@ -4,6 +4,6 @@ Format: `CSI {l} ; {c} H`
 7-Bit Hex: `1b 5b {l} 3b {c} 41`
 Default: `{l}` = `1`
     `{c}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CP) Cursor Position
 Description: Move to line `{l}`, column `{c}`.
