--- a/docs/csi/9b-49.md
+++ b/docs/csi/9b-49.md
@@ -3,6 +3,6 @@ Format: `CSI {n} I`
 8-Bit Hex: `9b {n} 49`
 7-Bit Hex: `1b 5b {n} 49`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CHT) Cursor Forward Tabulation
 Description: Move forward `{n}` character tab stops.
