--- a/docs/csi/9b-4a.md
+++ b/docs/csi/9b-4a.md
@@ -3,7 +3,7 @@ Format: `CSI {p} J`
 8-Bit Hex: `9b {p} 4a`
 7-Bit Hex: `1b 5b {p} 4a`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (ED) Erase In Page
 Description: Erase some or all of the screen.
 
