--- a/docs/csi/9b-4b.md
+++ b/docs/csi/9b-4b.md
@@ -3,7 +3,7 @@ Format: `CSI {p} K`
 8-Bit Hex: `9b {p} 4b`
 7-Bit Hex: `1b 5b {p} 4b`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (EL) Erase In Line
 Description: Erase some or all of the current line.
 
