--- a/docs/csi/9b-4e.md
+++ b/docs/csi/9b-4e.md
@@ -3,7 +3,7 @@ Format: `CSI {p} N`
 8-Bit Hex: `9b {p} 4e`
 7-Bit Hex: `1b 5b {p} 4e`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (EF) Erase In Field
 Description: Erase some or all characters in a field.
 
