--- a/docs/csi/9b-4f.md
+++ b/docs/csi/9b-4f.md
@@ -3,7 +3,7 @@ Format: `CSI {p} O`
 8-Bit Hex: `9b {p} 4f`
 7-Bit Hex: `1b 5b {p} 4f`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (EA) Erase In Area
 Description: Remove some or all characters from an area.
 
