--- a/docs/csi/9b-51.md
+++ b/docs/csi/9b-51.md
@@ -3,7 +3,7 @@ Format: `CSI {p} Q`
 8-Bit Hex: `9b {p} 51`
 7-Bit Hex: `1b 5b {p} 51`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SEE) Select Editing Extent
 Description: Set editing extent.
 
