--- a/docs/csi/9b-52.md
+++ b/docs/csi/9b-52.md
@@ -4,6 +4,6 @@ Format: `CSI {l} ; {c} R`
 7-Bit Hex: `1b 5b {l} 3b {c} 52`
 Default: `{l}` = `1`
     `{c}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CPR) Active Position Report
 Description: Terminal reporting cursor is at line `{l}`, column `{c}`.
