--- a/docs/csi/9b-54.md
+++ b/docs/csi/9b-54.md
@@ -3,6 +3,6 @@ Format: `CSI {n} T`
 8-Bit Hex: `9b {n} 54`
 7-Bit Hex: `1b 5b {n} 54`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (SD) Scroll Down
 Description: Scroll display down `{n}` lines.
