--- a/docs/csi/9b-57.md
+++ b/docs/csi/9b-57.md
@@ -3,7 +3,7 @@ Format: `CSI {p} W`
 8-Bit Hex: `9b {p} 57`
 7-Bit Hex: `1b 5b {p} 57`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (CTC) Cursor Tabulation Control
 Description: Set or clear tab stops.
 
