--- a/docs/csi/9b-5c.md
+++ b/docs/csi/9b-5c.md
@@ -3,7 +3,7 @@ Format: `CSI {p} \`
 8-Bit Hex: `9b {p} 5c`
 7-Bit Hex: `1b 5b {p} 5c`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (PTX) Parallel Texts
 Description: Controls display of parallel texts.
 
