--- a/docs/csi/9b-5d.md
+++ b/docs/csi/9b-5d.md
@@ -3,7 +3,7 @@ Format: `CSI {p} ]`
 8-Bit Hex: `9b {p} 5d`
 7-Bit Hex: `1b 5b {p} 5d`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SDS) Start Directed String
 Description: Mark how a string is displayed.
 
