--- a/docs/csi/9b-5e.md
+++ b/docs/csi/9b-5e.md
@@ -3,7 +3,7 @@ Format: `CSI {p} ^`
 8-Bit Hex: `9b {p} 5e`
 7-Bit Hex: `1b 5b {p} 5e`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SIMD) Select Implicit Movement Direction
 Description: Sets cursor movement direction.
 
