--- a/docs/csi/9b-60.md
+++ b/docs/csi/9b-60.md
@@ -3,6 +3,6 @@ Format: `CSI {c} GRAVE`
 8-Bit Hex: `9b {c} 60`
 7-Bit Hex: `1b 5b {c} 60`
 Default: `{c}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (HPA) Character Position Absolute
 Description: Move to column `{c}` in the active line.
