--- a/docs/csi/9b-63.md
+++ b/docs/csi/9b-63.md
@@ -3,7 +3,7 @@ Format: `CSI {p} c`
 8-Bit Hex: `9b {p} 63`
 7-Bit Hex: `1b 5b {p} 63`
 Default: `{n}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (DA) Device Attributes
 Description: Request or send device type identification codes.
 
