--- a/docs/csi/9b-64.md
+++ b/docs/csi/9b-64.md
@@ -3,6 +3,6 @@ Format: `CSI {l} d`
 8-Bit Hex: `9b {l} 64`
 7-Bit Hex: `1b 5b {l} 64`
 Default: `{l}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (VPA) Line Position Absolute
 Description: Move straight up or down to line `{l}`.
