--- a/docs/csi/9b-69.md
+++ b/docs/csi/9b-69.md
@@ -3,7 +3,7 @@ Format: `CSI {p} i`
 8-Bit Hex: `9b {p} 69`
 7-Bit Hex: `1b 5b {p} 69`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (MC) Media Copy
 Description: Start a data transfer.
 
