--- a/docs/csi/9b-6b.md
+++ b/docs/csi/9b-6b.md
@@ -3,6 +3,6 @@ Format: `CSI {n} k`
 8-Bit Hex: `9b {n} 6b`
 7-Bit Hex: `1b 5b {n} 6b`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (VPB) Line Position Backward
 Description: Move up `{n}` lines.
