--- a/docs/csi/9b-6c.md
+++ b/docs/csi/9b-6c.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} l`
 8-Bit Hex: `9b {p..} 6c`
 7-Bit Hex: `1b 5b {p..} 6c`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (RM) Reset Mode
 Description: Set receiving device mode.
 
