--- a/docs/csi/9b-6d.md
+++ b/docs/csi/9b-6d.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} m`
 8-Bit Hex: `9b {p..} 6d`
 7-Bit Hex: `1b 5b {p..} 6d`
 Default: `{p..}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SGR) Select Graphic Rendition
 Description: Set colors, fonts, and many others.
 
