--- a/docs/csi/9b-6e.md
+++ b/docs/csi/9b-6e.md
@@ -3,7 +3,7 @@ Format: `CSI {p} n`
 8-Bit Hex: `9b {p} 20 6e`
 7-Bit Hex: `1b 5b {p} 20 6e`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (DSR) Device Status Report
 Description: Request or report the status of a device.
 
