--- a/docs/csi/9b-6f.md
+++ b/docs/csi/9b-6f.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} o`
 8-Bit Hex: `9b {p..} 6f`
 7-Bit Hex: `1b 5b {p..} 6f`
 Default: `{p..}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (DAQ) Define Area Qualification
 Description: Create a new area.
 
