--- a/docs/csi/9b-20-40.md
+++ b/docs/csi/9b-20-40.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP @`
 8-Bit Hex: `9b {n} 20 40`
 7-Bit Hex: `1b 5b {n} 20 40`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (SL) Scroll Left
 Description: Moves displayed text left `{n}` columns.
