--- a/docs/csi/9b-20-43.md
+++ b/docs/csi/9b-20-43.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP C`
 8-Bit Hex: `9b {p} 20 43`
 7-Bit Hex: `1b 5b {p} 20 43`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (GSM) Graphic Size Selection
 Description: Change the size of the font.
 
