--- a/docs/csi/9b-20-46.md
+++ b/docs/csi/9b-20-46.md
@@ -3,7 +3,7 @@ Format: `CSI {p..} SP F`
 8-Bit Hex: `9b {p..} 20 46`
 7-Bit Hex: `1b 5b {p..} 20 46`
 Default: `{p..}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (JFY) Justify
 Description: Mark where special character formatting starts.
 
