--- a/docs/csi/9b-20-55.md
+++ b/docs/csi/9b-20-55.md
@@ -3,7 +3,7 @@ Format: `CSI {n} SP U`
 8-Bit Hex: `9b {n} 20 55`
 7-Bit Hex: `1b 5b {n} 20 55`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SLH) Set Line Home
 Description: Sets the starting position for lines.
 
