--- a/docs/csi/9b-20-56.md
+++ b/docs/csi/9b-20-56.md
@@ -3,7 +3,7 @@ Format: `CSI {n} SP V`
 8-Bit Hex: `9b {n} 20 56`
 7-Bit Hex: `1b 5b {n} 20 56`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SLH) Set Line Limit
 Description: Sets the ending position for lines.
 
