--- a/docs/csi/9b-20-57.md
+++ b/docs/csi/9b-20-57.md
@@ -3,6 +3,6 @@ Format: `CSI {k} SP W`
 8-Bit Hex: `9b {k} 20 57`
 7-Bit Hex: `1b 5b {k} 20 57`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (FNK) Function Key
 Description: `{k}` is the function key that was pressed.
