--- a/docs/csi/9b-20-5a.md
+++ b/docs/csi/9b-20-5a.md
@@ -3,6 +3,6 @@ Format: `CSI {p} SP Z`
 8-Bit Hex: `9b {p} 20 5a`
 7-Bit Hex: `1b 5b {p} 20 5a`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (PEC) Presentation Expand Or Contract
 Description: Set character spacing.
