--- a/docs/csi/9b-20-5c.md
+++ b/docs/csi/9b-20-5c.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP \`
 8-Bit Hex: `9b {p} 20 5c`
 7-Bit Hex: `1b 5b {p} 20 5c`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SACS) Set Additional Character Separation
 Description: Sets character separation.
 
