--- a/docs/csi/9b-20-5e.md
+++ b/docs/csi/9b-20-5e.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP ^`
 8-Bit Hex: `9b {n} 20 5e`
 7-Bit Hex: `1b 5b {n} 20 5e`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (STAB) Selective Tabulation
 Description: Align text according to `{n}`th tab stop.
