--- a/docs/csi/9b-20-60.md
+++ b/docs/csi/9b-20-60.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP GRAVE`
 8-Bit Hex: `9b {n} 20 60`
 7-Bit Hex: `1b 5b {n} 20 60`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (TALE) Tabulation Aligned Trailing Edge
 Description: Set right-aligned tab stop at column `{n}`.
