--- a/docs/csi/9b-20-61.md
+++ b/docs/csi/9b-20-61.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP a`
 8-Bit Hex: `9b {n} 20 61`
 7-Bit Hex: `1b 5b {n} 20 61`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (TALE) Tabulation Aligned Leading Edge
 Description: Set left-aligned tab stop at column `{n}`.
