--- a/docs/csi/9b-20-62.md
+++ b/docs/csi/9b-20-62.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP b`
 8-Bit Hex: `9b {n} 20 62`
 7-Bit Hex: `1b 5b {n} 20 62`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (TAC) Tabulation Aligned Centered
 Description: Set centered tab stop at `{n}`th column.
