--- a/docs/csi/9b-20-68.md
+++ b/docs/csi/9b-20-68.md
@@ -3,7 +3,7 @@ Format: `CSI {p} SP h`
 8-Bit Hex: `9b {p} 20 68`
 7-Bit Hex: `1b 5b {p} 20 68`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SLS) Set Line Spacing
 Description: Sets line spacing of following text.
 
