--- a/docs/csi/9b-20-69.md
+++ b/docs/csi/9b-20-69.md
@@ -3,7 +3,7 @@ Format: `CSI {n} SP i`
 8-Bit Hex: `9b {n} 20 69`
 7-Bit Hex: `1b 5b {n} 20 69`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SPH) Set Page Home
 Description: Sets the starting position for the page.
 
