--- a/docs/csi/9b-20-6a.md
+++ b/docs/csi/9b-20-6a.md
@@ -3,6 +3,6 @@ Format: `CSI {n} SP j`
 8-Bit Hex: `9b {n} 20 6a`
 7-Bit Hex: `1b 5b {n} 20 6a`
 Default: `{n}` = *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SPH) Set Page Limit
 Description: Sets the ending position for the active page.
