--- a/docs/csi/9b-40.md
+++ b/docs/csi/9b-40.md
@@ -3,6 +3,6 @@ Format: `CSI {n} @`
 8-Bit Hex: `9b {n} 40`
 7-Bit Hex: `1b 5b {n} 40`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (ICH) Insert Character
 Description: Insert `{n}` blanks at the cursor position.
