--- a/docs/csi/9b-46.md
+++ b/docs/csi/9b-46.md
@@ -3,6 +3,6 @@ Format: `CSI {n} F`
 8-Bit Hex: `9b {n} 46`
 7-Bit Hex: `1b 5b {n} 46`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CPL) Cursor Preceding Line
 Description: Moves cursor to the first character of the `{n}`th preceding line.
