--- a/docs/csi/9b-47.md
+++ b/docs/csi/9b-47.md
@@ -3,6 +3,6 @@ Format: `CSI {c} G`
 8-Bit Hex: `9b {c} 47`
 7-Bit Hex: `1b 5b {c} 47`
 Default: `{c}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CHA) Cursor Character Absolute
 Description: Move to column `{c}` on the current line.
