--- a/docs/csi/9b-4c.md
+++ b/docs/csi/9b-4c.md
@@ -3,6 +3,6 @@ Format: `CSI {n} L`
 8-Bit Hex: `9b {n} 4c`
 7-Bit Hex: `1b 5b {n} 4c`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (IL) Insert Line
 Description: Insert `{n}` lines, starting at cursor.
