--- a/docs/csi/9b-4d.md
+++ b/docs/csi/9b-4d.md
@@ -3,6 +3,6 @@ Format: `CSI {n} M`
 8-Bit Hex: `9b {n} 4d`
 7-Bit Hex: `1b 5b {n} 4d`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (DL) Delete Line
 Description: Delete `{n}` lines, shifting other lines to close the gap.
