--- a/docs/csi/9b-50.md
+++ b/docs/csi/9b-50.md
@@ -3,6 +3,6 @@ Format: `CSI {n} P`
 8-Bit Hex: `9b {n} 50`
 7-Bit Hex: `1b 5b {n} 50`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (DCH) Delete Character
 Description: Delete `{n}` characters and shifts rest of line left.
