--- a/docs/csi/9b-53.md
+++ b/docs/csi/9b-53.md
@@ -3,6 +3,6 @@ Format: `CSI {n} S`
 8-Bit Hex: `9b {n} 53`
 7-Bit Hex: `1b 5b {n} 53`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (SU) Scroll Up
 Description: Scroll display up `{n}` lines.
