--- a/docs/csi/9b-58.md
+++ b/docs/csi/9b-58.md
@@ -3,6 +3,6 @@ Format: `CSI {n} X`
 8-Bit Hex: `9b {n} 58`
 7-Bit Hex: `1b 5b {n} 58`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (ECH) Erase Character
 Description: Erase `{n}` characters from cursor and going forward.
