--- a/docs/csi/9b-5a.md
+++ b/docs/csi/9b-5a.md
@@ -3,6 +3,6 @@ Format: `CSI {n} Z`
 8-Bit Hex: `9b {n} 5a`
 7-Bit Hex: `1b 5b {n} 5a`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (CBT) Cursor Backward Tabulation
 Description: Move back `{n}` character tab stops.
