--- a/docs/csi/9b-5b.md
+++ b/docs/csi/9b-5b.md
@@ -3,7 +3,7 @@ Format: `CSI {p} [`
 8-Bit Hex: `9b {p} 5b`
 7-Bit Hex: `1b 5b {p} 5b`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (SRS) Start Reversed String
 Description: Marks the beginning of reversed text.
 
