--- a/docs/csi/9b-65.md
+++ b/docs/csi/9b-65.md
@@ -3,6 +3,6 @@ Format: `CSI {n} e`
 8-Bit Hex: `9b {n} 65`
 7-Bit Hex: `1b 5b {n} 65`
 Default: `{n}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (VPR) Line Position Forward
 Description: Move down `{n}` lines.
