--- a/docs/csi/9b-66.md
+++ b/docs/csi/9b-66.md
@@ -4,6 +4,6 @@ Format: `CSI {l} ; {c} f`
 7-Bit Hex: `1b 5b {l} 3b {c} 66`
 Default: `{l}` = `1`
     `{c}` = `1`
-Source: E-CF
+Source: [E-CF]
 Title: (HVP) Character Line And Position
 Description: Move the cursor down `{l}` lines and forward `{c}` columns.
