--- a/docs/csi/9b-67.md
+++ b/docs/csi/9b-67.md
@@ -3,7 +3,7 @@ Format: `CSI {p} g`
 8-Bit Hex: `9b {p} 67`
 7-Bit Hex: `1b 5b {p} 67`
 Default: `{p}` = `0`
-Source: E-CF
+Source: [E-CF]
 Title: (TBC) Tabulation Clear
 Description: Clear one or more tab stops.
 
