--- a/docs/csi/9b-68.md
+++ b/docs/csi/9b-68.md
@@ -3,7 +3,7 @@ Format: `CSI {p} h`
 8-Bit Hex: `9b {p} 68`
 7-Bit Hex: `1b 5b {p} 68`
 Default: *none*
-Source: E-CF
+Source: [E-CF]
 Title: (SM) Set Mode
 Description: Set receiving device mode.
 
