Adding additional codes

--- a/docs/codes/85.md
+++ b/docs/codes/85.md
@@ -1,5 +1,5 @@
 Code: NEL
 Description: Next Line
-7-Bit: **0205, 133, 0x85**
+7-Bit: `ESC E` (1b 45)
 8-Bit: **0205, 133, 0x85**
 Source: [E-CF] [W-CC]
