--- a/docs/codes/8d.md
+++ b/docs/codes/8d.md
@@ -1,5 +1,5 @@
 Code: RI
-Description: Reverse Line Feed
-7-Bit: **0215, 141, 0x8d**
+Description: Reverse Index / Reverse Line Feed (one line up)
+7-Bit: `ESC M` (`1b 4d`)
 8-Bit: **0215, 141, 0x8d**
 Source: [E-CF] [W-CC]
