--- a/docs/codes/9d.md
+++ b/docs/codes/9d.md
@@ -1,5 +1,5 @@
 Code: OSC
 Description: Operating System Command
-7-Bit: `ESC ]`
+7-Bit: `ESC ]` (`1b 5d`)
 8-Bit: **0235, 157, 0x9d**
 Source: [E-CF] [E-CS]
