--- a/docs/codes/9b.md
+++ b/docs/codes/9b.md
@@ -1,5 +1,5 @@
 Code: CSI
 Description: Control Sequence Introducer
-7-Bit: `ESC [`
+7-Bit: `ESC [` (`1b 5b`)
 8-Bit: **0233, 155, 0x9b**
 Source: [E-CF] [E-CS]
