--- a/docs/codes/9c.md
+++ b/docs/codes/9c.md
@@ -1,5 +1,5 @@
 Code: ST
 Description: String Terminator
-7-Bit: `ESC \`
+7-Bit: `ESC \` (`1b 5c`)
 8-Bit: **0234, 156, 0x9c**
 Source: [E-CF] [E-CS]
