--- a/docs/csi/9b-41.md
+++ b/docs/csi/9b-41.md
@@ -3,6 +3,8 @@ Format: `CSI {n} A`
 8-Bit Hex: `9b {n} 41`
 7-Bit Hex: `1b 5b {n} 41`
 Default: `{n}` = `1`
-Source: [E-CF]
+Source: [E-CF] [VT220]
 Title: (CUU) Cursor Up
 Description: Moves the cursor up `{n}` lines.
+
+The keyboard can send this code when the arrow keys are used.
