--- a/docs/csi/9b-43.md
+++ b/docs/csi/9b-43.md
@@ -3,6 +3,8 @@ Format: `CSI {n} C`
 8-Bit Hex: `9b {n} 43`
 7-Bit Hex: `1b 5b {n} 43`
 Default: `{n}` = `1`
-Source: [E-CF]
+Source: [E-CF] [VT220]
 Title: (CUF) Cursor Right
 Description: Moves the cursor forward / right `{n}` columns.
+
+The keyboard can send this code when the arrow keys are used.
