--- a/docs/csi/9b-44.md
+++ b/docs/csi/9b-44.md
@@ -3,6 +3,8 @@ Format: `CSI {n} D`
 8-Bit Hex: `9b {n} 44`
 7-Bit Hex: `1b 5b {n} 44`
 Default: `{n}` = `1`
-Source: [E-CF]
+Source: [E-CF] [VT220]
 Title: (CUB) Cursor Left
 Description: Moves the cursor backward / left `{n}` columns.
+
+The keyboard can send this code when the arrow keys are used.
